--- a/content/About.html
+++ b/content/About.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='USB2.html'>USB2</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='USB.html'>USB</a></li></ul><li><a href='USB2.html'>USB2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,9 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='USB2.html'>Next</a> >> USB2<br /><h1>About</h1>
-<p>USB</p>
-<br /> <a href='USB2.html'>Next</a> >> USB2</div>
+    <div id="tipue_search_content"> <a href='USB.html'>Next</a> >> USB<br /><h1>About</h1>
+<br /> <a href='USB.html'>Next</a> >> USB</div>
         
     <!-- footer -->
       <div class="container">
