--- a/content/USB2.html
+++ b/content/USB2.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='USB2.html'>USB2</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='USB.html'>USB</a></li></ul><li><a href='USB2.html'>USB2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>USB2</h1><br />About << <a href='About.html'>Previous</a> </div>
+    <div id="tipue_search_content">USB << <a href='USB.html'>Previous</a> <br /><h1>USB2</h1><br />USB << <a href='USB.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
