--- a/content/About.html
+++ b/content/About.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='USB.html'>USB</a></li></ul><li><a href='USB2.html'>USB2</a></li>
+                     <li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,22 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='USB.html'>Next</a> >> USB<br /><h1>About</h1>
-<p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p><br /> <a href='USB.html'>Next</a> >> USB</div>
+    <div id="tipue_search_content"> <br /><h1>About</h1>
+<p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
+<p><iframe height="600" src="https://dartpad.dartlang.org/?id=7b537e01e70c2ca5e20c778bb94b811c" width="800"></iframe></p>
+<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
+int sum;
+
+main(){
+  sum = 0;
+  for(i=1;i &lt;= 10 ;i++){
+    sum += i;
+    print("$sum");
+  }
+  print('sum = $sum');
+}</pre>
+<p><br/><br/><br/></p>
+<br /> </div>
         
     <!-- footer -->
       <div class="container">
