--- a/content/index.html
+++ b/content/index.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li><a href='http://mde.tw/cp2019/content/index.html.html'>http://mde.tw/cp2019/content/index.html</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,11 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>About</h1>
-<p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
+    <div id="tipue_search_content"> <br /><h1>http://mde.tw/cp2019/content/index.html</h1>
+<p></p>
+<br/>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a>
+<iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe>
+<br/>1-&gt;10  <a href="https://gist.github.com/40823228/7b537e01e70c2ca5e20c778bb94b811c">程式碼</a>
 <p><iframe height="600" src="https://dartpad.dartlang.org/?id=7b537e01e70c2ca5e20c778bb94b811c" width="800"></iframe></p>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
 int sum;
@@ -163,8 +166,7 @@ main(){
   }
   print('sum = $sum');
 }</pre>
-<p><br/><br/><br/></p>
-<br /> </div>
+<p><br/><br/><br/></p><br /> </div>
         
     <!-- footer -->
       <div class="container">
