--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,9 @@
-<h1>First</h1>
-<p>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe> <br/>1-&gt;10  <a href="https://gist.github.com/40823228/7b537e01e70c2ca5e20c778bb94b811c">程式碼</a></p>
-<p><iframe height="600" src="https://dartpad.dartlang.org/?id=7b537e01e70c2ca5e20c778bb94b811c" width="800"></iframe></p>
+<h1>About</h1>
+<h1>每周進度</h1>
+<h2>w3</h2>
+<p><br/><br/>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
+<h3>W6</h3>
+<p>1-&gt;10   <a href="https://gist.github.com/40823228/7b537e01e70c2ca5e20c778bb94b811c">程式碼</a><iframe height="600" src="https://dartpad.dartlang.org/?id=7b537e01e70c2ca5e20c778bb94b811c" width="800"></iframe></p>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
 int sum;
 
@@ -12,4 +15,30 @@ main(){
   }
   print('sum = $sum');
 }</pre>
-<p><br/><br/><br/></p>
+<h5>W7<br/><br/><br/></h5>
+<script>
+function getDart(dirname){
+    source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823224&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+    document.getElementById("iframe").src = source ;
+}
+
+function getHtmlDart(dirname){
+    source = "https://dartpad.github.io/embed-html.html?gh_owner=40823224&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function getFlutter(dirname){
+    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=40823224&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function largest(){
+document.getElementById("iframe").width = document.body.clientWidth ;
+document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
+}
+
+function original(){
+document.getElementById("iframe").width = 800 ;
+document.getElementById("iframe").height = 600 ;
+}
+</script>
