--- a/content/w3.html
+++ b/content/w3.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='W6.html'>W6</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,20 +149,9 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>First</h1>
-<p>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe> <br/>1-&gt;10   <a href="https://gist.github.com/40823228/7b537e01e70c2ca5e20c778bb94b811c">程式碼</a><iframe height="600" src="https://dartpad.dartlang.org/?id=7b537e01e70c2ca5e20c778bb94b811c" width="800"></iframe></p>
-<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
-int sum;
-
-main(){
-  sum = 0;
-  for(i=1;i &lt;= 10 ;i++){
-    sum += i;
-    print("$sum");
-  }
-  print('sum = $sum');
-}</pre>
-<p><br/><br/><br/></p><br /> </div>
+    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>w3</h1>
+<p><br/><br/>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
+<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
       <div class="container">
