--- a/content/w3 - Dartpad - 哈囉.html
+++ b/content/w3 - Dartpad - 哈囉.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='W6.html'>W6</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,9 +149,9 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>w3</h1>
+    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='W6 - for 迴圈程式 1~10.html'>Next</a> >> W6 - for 迴圈程式 1~10<br /><h1>w3 - Dartpad - 哈囉</h1>
 <p><br/><br/>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
-<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
+<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='W6 - for 迴圈程式 1~10.html'>Next</a> >> W6 - for 迴圈程式 1~10</div>
         
     <!-- footer -->
       <div class="container">
