--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,8 +1,8 @@
 <h1>About</h1>
 <h1>每周進度</h1>
-<h2>w3</h2>
+<h2>w3-Dartpad  哈囉</h2>
 <p><br/><br/>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
-<h3>W6</h3>
+<h2>W6-for 迴圈程式 1~10</h2>
 <p>1-&gt;10   <a href="https://gist.github.com/40823228/7b537e01e70c2ca5e20c778bb94b811c">程式碼</a><iframe height="600" src="https://dartpad.dartlang.org/?id=7b537e01e70c2ca5e20c778bb94b811c" width="800"></iframe></p>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
 int sum;
@@ -15,7 +15,7 @@ main(){
   }
   print('sum = $sum');
 }</pre>
-<h5>W7<br/><br/><br/></h5>
+<h2>W7-利用 for 迴圈與函式定義呼叫解常微分方程式</h2>
 <script>
 function getDart(dirname){
     source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823224&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
@@ -42,3 +42,7 @@ document.getElementById("iframe").width = 800 ;
 document.getElementById("iframe").height = 600 ;
 }
 </script>
+<!-- 取 Dart 程式的按鈕 -->
+<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button> <button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping</button> <button onclick="getHtmlDart('roc_flag')">ROC Flag</button> <button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('slithery')">Slithery</button> <button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button></p>
+<!-- 內建放入的 Dart 原始碼 -->
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823224&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
