--- a/content/W6 - for 迴圈程式 1~10.html
+++ b/content/W6 - for 迴圈程式 1~10.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='W6.html'>W6</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <br /><h1>W6</h1>
+    <div id="tipue_search_content">w3 - Dartpad - 哈囉 << <a href='w3 - Dartpad - 哈囉.html'>Previous</a> <a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>Next</a> >> W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式<br /><h1>W6 - for 迴圈程式 1~10</h1>
 <p>1-&gt;10   <a href="https://gist.github.com/40823228/7b537e01e70c2ca5e20c778bb94b811c">程式碼</a><iframe height="600" src="https://dartpad.dartlang.org/?id=7b537e01e70c2ca5e20c778bb94b811c" width="800"></iframe></p>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
 int sum;
@@ -162,7 +162,7 @@ main(){
   }
   print('sum = $sum');
 }</pre>
-<h5>W7<br/><br/><br/></h5><br />w3 << <a href='w3.html'>Previous</a> </div>
+<br />w3 - Dartpad - 哈囉 << <a href='w3 - Dartpad - 哈囉.html'>Previous</a> <a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>Next</a> >> W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</div>
         
     <!-- footer -->
       <div class="container">
