--- a/content/每周進度.html
+++ b/content/每周進度.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='W6.html'>W6</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>每周進度</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w3 - Dartpad - 哈囉.html'>Next</a> >> w3 - Dartpad - 哈囉<br /><h1>每周進度</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='w3 - Dartpad - 哈囉.html'>Next</a> >> w3 - Dartpad - 哈囉</div>
         
     <!-- footer -->
       <div class="container">
