--- a/content/W11 - 新增攝氏華氏轉換鍵.html
+++ b/content/W11 - 新增攝氏華氏轉換鍵.html
@@ -149,20 +149,45 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">w3 - Dartpad - 哈囉 << <a href='w3 - Dartpad - 哈囉.html'>Previous</a> <a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>Next</a> >> W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式<br /><h1>W6 - for 迴圈程式 1~10</h1>
-<p>1-&gt;10   <a href="https://gist.github.com/40823228/7b537e01e70c2ca5e20c778bb94b811c">程式碼</a><iframe height="600" src="https://dartpad.dartlang.org/?id=7b537e01e70c2ca5e20c778bb94b811c" width="800"></iframe></p>
-<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
-int sum;
+    <div id="tipue_search_content">W10 - 分組任務 << <a href='W10 - 分組任務.html'>Previous</a> <br /><h1>W11 - 新增攝氏華氏轉換鍵</h1>
+<script>
+function getDart(dirname){
+    source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823224&gh_repo=cp2019bg6&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+    document.getElementById("iframe").src = source ;
+}
 
-main(){
-  sum = 0;
-  for(i=1;i &lt;= 10 ;i++){
-    sum += i;
-    print("$sum");
-  }
-  print('sum = $sum');
-}</pre>
-<br />w3 - Dartpad - 哈囉 << <a href='w3 - Dartpad - 哈囉.html'>Previous</a> <a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>Next</a> >> W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</div>
+function getHtmlDart(dirname){
+    source = "https://dartpad.github.io/embed-html.html?gh_owner=40823224&gh_repo=cp2019bg6&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function getFlutter(dirname){
+    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=40823224&gh_repo=cp2019bg6&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function largest(){
+document.getElementById("iframe").width = document.body.clientWidth ;
+document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
+}
+
+function original(){
+document.getElementById("iframe").width = 800 ;
+document.getElementById("iframe").height = 600 ;
+}
+</script>
+<!-- 取 Dart 程式的按鈕 -->
+<h4>純 Dart 程式</h4>
+<p><button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('rk_ex1')">RK ex1</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping  </button></p>
+<h4>Html 程式</h4>
+<p><button onclick="getHtmlDart('roc_flag')">ROC Flag</button> <button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('xyplot')">X-Y Plot</button> <button onclick="getHtmlDart('slithery')">Slithery</button></p>
+<h4>Flutter 程式</h4>
+<p><button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button></p>
+<h4>攝氏與華氏轉換</h4>
+<p>cf</p>
+<!-- 內建放入的 Dart 原始碼 -->
+<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823224&amp;gh_repo=cp2019bg6&amp;gh_path=downloads/dart_ex/cf&amp;theme=dark" width="800"></iframe></p><br />W10 - 分組任務 << <a href='W10 - 分組任務.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
