--- a/content/W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html
+++ b/content/W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W11.html'>W11</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W10 - 分組任務.html'>W10 - 分組任務</a><li><a href='W11 - 新增攝氏華氏轉換鍵.html'>W11 - 新增攝氏華氏轉換鍵</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">W6 - for 迴圈程式 1~10 << <a href='W6 - for 迴圈程式 1~10.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</h1>
+    <div id="tipue_search_content">W6 - for 迴圈程式 1~10 << <a href='W6 - for 迴圈程式 1~10.html'>Previous</a> <a href='W10 - 分組任務.html'>Next</a> >> W10 - 分組任務<br /><h1>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</h1>
 <script>
 function getDart(dirname){
     source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823224&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
@@ -179,8 +179,8 @@ document.getElementById("iframe").height = 600 ;
 <!-- 取 Dart 程式的按鈕 -->
 <p><button onclick="largest()">放大</button> <button onclick="original()">回復</button> <button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping</button> <button onclick="getHtmlDart('roc_flag')">ROC Flag</button> <button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('slithery')">Slithery</button> <button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button></p>
 <!-- 內建放入的 Dart 原始碼 -->
-<iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823224&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe>
-<br />W6 - for 迴圈程式 1~10 << <a href='W6 - for 迴圈程式 1~10.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823224&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
+<br />W6 - for 迴圈程式 1~10 << <a href='W6 - for 迴圈程式 1~10.html'>Previous</a> <a href='W10 - 分組任務.html'>Next</a> >> W10 - 分組任務</div>
         
     <!-- footer -->
       <div class="container">
