--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,8 @@
-<h1>About</h1>
+<h1>首頁</h1>
+<h6><a href="https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber">https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber</a></h6>
+<h4>Youtube頻道</h4>
+<h6><a href="https://github.com/40823228/cp2019/commits/master">https://github.com/40823228/cp2019/commits/master</a> </h6>
+<h4>個人倉儲</h4>
 <h1>每周進度</h1>
 <h2>w3 - Dartpad - 哈囉</h2>
 <p><br/><br/>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
@@ -75,7 +79,10 @@ document.getElementById("iframe").height = 600 ;
 </script>
 </p>
 <!-- 取 Dart 程式的按鈕 -->
-<h2>W10 - 分組任務</h2>
+<p>阻尼係數=1</p>
+<p><img alt="" height="328" src="/images/1.png" width="546"/></p>
+<p>阻尼係數=0</p>
+<p><img alt="" height="329" src="/images/0.png" width="544"/></p><h2>W10 - 分組任務</h2>
 <h4>純 Dart 程式</h4>
 <p><button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('rk_ex1')">RK ex1</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping</button> <button onclick="getDart('function')">Function</button> <button onclick="getDart('fun_parameter')">Function Parameter</button> <button onclick="getDart('fat_arrow')">Fat Arrow</button></p>
 <h4>Html 程式</h4>
