--- a/content/W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html
+++ b/content/W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W10 - 分組任務.html'>W10 - 分組任務</a><li><a href='W11 - 新增攝氏華氏轉換鍵.html'>W11 - 新增攝氏華氏轉換鍵</a></li>
+                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W10 - 分組任務.html'>W10 - 分組任務</a><li><a href='W11 - 新增攝氏華氏轉換鍵.html'>W11 - 新增攝氏華氏轉換鍵</a><li><a href='W12 - 任務.html'>W12 - 任務</a></li>
                       </ul>
                 </nav>
               </div>
@@ -212,7 +212,8 @@ document.getElementById("iframe").height = 600 ;
 <p>阻尼係數=1</p>
 <p><img alt="" height="328" src="./../images/1.png" width="546"/></p>
 <p>阻尼係數=0</p>
-<p><img alt="" height="329" src="./../images/0.png" width="544"/></p><br />W6 - for 迴圈程式 1~10 << <a href='W6 - for 迴圈程式 1~10.html'>Previous</a> <a href='W10 - 分組任務.html'>Next</a> >> W10 - 分組任務</div>
+<p><img alt="" height="329" src="./../images/0.png" width="544"/></p>
+<br />W6 - for 迴圈程式 1~10 << <a href='W6 - for 迴圈程式 1~10.html'>Previous</a> <a href='W10 - 分組任務.html'>Next</a> >> W10 - 分組任務</div>
         
     <!-- footer -->
       <div class="container">
