--- a/content/W15 - 亂數分組.html
+++ b/content/W15 - 亂數分組.html
@@ -149,9 +149,9 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='W6 - for 迴圈程式 1~10.html'>Next</a> >> W6 - for 迴圈程式 1~10<br /><h1>w3 - Dartpad - 哈囉</h1>
-<p><br/><br/>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
-<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='W6 - for 迴圈程式 1~10.html'>Next</a> >> W6 - for 迴圈程式 1~10</div>
+    <div id="tipue_search_content">W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> <br /><h1>W15 - 亂數分組</h1>
+<p>亂數分組:</p>
+<p>學員名單 URL: <input id="studListUrl" size="50" type="text" value="https://mde.tw/cp2019/downloads/2019fall_cp_1b_list.txt"/><br/> 每組人數: <input id="grpNum" size="3" type="text" value="10"/><br/> <input id="submit" type="submit" value="開始分組"/><br/> <label id="output"></label></p><br />W14 - 國旗 << <a href='W14 - 國旗.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
