--- a/content/W14 - 國旗.html
+++ b/content/W14 - 國旗.html
@@ -67,7 +67,7 @@
 <link type="text/css" rel="stylesheet" href="./../cmsimde/static/syntaxhighlighter/css/shCoreDefault.css"/>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 
-<!-- for LaTeX equations 暫時不用
+<!-- 啟用 LaTeX equations 編輯 -->
 <script src="https://scrum-3.github.io/web/math/MathJax.js?config=TeX-MML-AM_CHTML" type="text/javascript"></script>
 <script type="text/javascript">
 init_mathjax = function() {
@@ -88,7 +88,7 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
--->
+
 <!-- 暫時不用
 <script src="./../cmsimde/static/fengari-web.js"></script>
 <script type="text/javascript" src="./../cmsimde/static/Cango-13v08-min.js"></script>
@@ -99,6 +99,11 @@ init_mathjax();
 <script src="https://scrum-3.github.io/web/brython/brython.js"></script>
 <script src="https://scrum-3.github.io/web/brython/brython_stdlib.js"></script>
 -->
+<style>
+img.add_border {
+    border: 3px solid blue;
+}
+</style>
 
 </head>
 <body>
@@ -138,7 +143,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W10 - 分組任務.html'>W10 - 分組任務</a><li><a href='W11 - 新增攝氏華氏轉換鍵.html'>W11 - 新增攝氏華氏轉換鍵</a><li><a href='W12 - 任務.html'>W12 - 任務</a><li><a href='W14 - 國旗.html'>W14 - 國旗</a><li><a href='W16 - 查 驗 考 試.html'>W16 - 查 驗 考 試</a></li>
+                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w3 - Dartpad - 哈囉.html'>w3 - Dartpad - 哈囉</a><li><a href='W6 - for 迴圈程式 1~10.html'>W6 - for 迴圈程式 1~10</a><li><a href='W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式.html'>W7 - 利用 for 迴圈與函式定義呼叫解常微分方程式</a><li><a href='W10 - 分組任務.html'>W10 - 分組任務</a><li><a href='W11 - 新增攝氏華氏轉換鍵.html'>W11 - 新增攝氏華氏轉換鍵</a><li><a href='W12 - 任務.html'>W12 - 任務</a><li><a href='W14 - 國旗.html'>W14 - 國旗</a></li></ul><li><a href='W16 - 查驗考試.html'>W16 - 查驗考試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +154,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">W12 - 任務 << <a href='W12 - 任務.html'>Previous</a> <a href='W16 - 查 驗 考 試.html'>Next</a> >> W16 - 查 驗 考 試<br /><h1>W14 - 國旗</h1>
+    <div id="tipue_search_content">W12 - 任務 << <a href='W12 - 任務.html'>Previous</a> <a href='W16 - 查驗考試.html'>Next</a> >> W16 - 查驗考試<br /><h1>W14 - 國旗</h1>
 <p><img alt="" height="198" src="./../images/擷取.PNG" width="299"/></p>
 <script>
 function getDart(dirname){
@@ -187,7 +192,7 @@ document.getElementById("iframe").height = 600 ;
 <!-- 內建放入的 Dart 原始碼 -->
 <p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
 <p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823228&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/temp1&amp;theme=dark" width="800"></iframe></p>
-<br />W12 - 任務 << <a href='W12 - 任務.html'>Previous</a> <a href='W16 - 查 驗 考 試.html'>Next</a> >> W16 - 查 驗 考 試</div>
+<br />W12 - 任務 << <a href='W12 - 任務.html'>Previous</a> <a href='W16 - 查驗考試.html'>Next</a> >> W16 - 查驗考試</div>
         
     <!-- footer -->
       <div class="container">
