--- a/config/content.htm
+++ b/config/content.htm
@@ -1,9 +1,10 @@
 <h1>首頁</h1>
+<p><img alt="" height="333" src="/images/16.jpg" width="500"/></p>
+<p>Youtube頻道</p>
 <h6><a href="https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber">https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber</a></h6>
-<h4>Youtube頻道</h4>
+<p>個 人 倉 儲</p>
 <h6><a href="https://github.com/40823228/cp2019/commits/master">https://github.com/40823228/cp2019/commits/master</a> </h6>
-<h4>個 人 倉 儲</h4>
-<h1>每周進度</h1>
+<h4></h4><h1>每周進度</h1>
 <h2>w3 - Dartpad - 哈囉</h2>
 <p><br/><br/>Hello  <a href="https://gist.github.com/40823228/2bd393f51ef2dfb3b5515e74f4a82f62">程式碼</a> <iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2bd393f51ef2dfb3b5515e74f4a82f62" width="800"></iframe></p>
 <h2>W6 - for 迴圈程式 1~10</h2>
@@ -132,8 +133,7 @@ document.getElementById("iframe").height = 600 ;
 <p><button onclick="getDart('cf')">cf</button></p>
 <!-- 內建放入的 Dart 原始碼 -->
 <p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
-<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823228&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/cf&amp;theme=dark" width="800"></iframe></p>
-<h2>W12 - 任務</h2>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823228&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/cf&amp;theme=dark" width="800"></iframe></p><h2>W12 - 任務</h2>
 <script>
 function getDart(dirname){
     source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823228&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
