--- a/content/首頁.html
+++ b/content/首頁.html
@@ -157,9 +157,9 @@ img.add_border {
     <div id="tipue_search_content"> <a href='每周進度.html'>Next</a> >> 每周進度<br /><h1>首頁</h1>
 <p><img alt="" height="333" src="./../images/16.jpg" width="500"/></p>
 <p>Youtube頻道</p>
-<h6><a href="https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber">https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber</a></h6>
+<p><a href="https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber">https://www.youtube.com/channel/UCUpA7nbNATHkewxpeQbOKaw?view_as=subscriber</a></p>
 <p>個 人 倉 儲</p>
-<h6><a href="https://github.com/40823228/cp2019/commits/master">https://github.com/40823228/cp2019/commits/master</a> </h6>
+<p><a href="https://github.com/40823228/cp2019">https://github.com/40823228/cp2019</a></p>
 <h4></h4><br /> <a href='每周進度.html'>Next</a> >> 每周進度</div>
         
     <!-- footer -->
