--- a/reveal/index.html
+++ b/reveal/index.html
@@ -130,7 +130,7 @@ Created by [KMOLab](http://lab.kmol.info/)
 <section data-markdown>
     <script type="text/template">
 # 心得
-一開始接觸這門課的時候，完全不知道這門課要學習的是甚麼東西，可是經過老師這一學期的教導後，讓我了解到很多的程式碼，雖然可能不是非常的精通，但是我會繼續努力學習，謝謝這門課讓知道原來程式在我們以後的社會上是不可或缺的，使我受益良多。
+一開始接觸這門課的時候，完全不知道這門課要學習的是甚麼東西，可是經過老師這一學期的教導後，讓我了解到很多的程式碼，雖然可能不是非常的精通，但是我會繼續努力學習，謝謝這門課讓知道原來程式在我們以後的社會上是不可或缺的，使我受益良多。 最後，這學期我給自己的分數是 65 分。
     </script>
 </section>
 
